--- a/scss/reset/variables.scss
+++ b/scss/reset/variables.scss
@@ -14,5 +14,5 @@
     --bg3morado: #61529f;
     --bg4azul:  #36569c;
     --bg4azulclaro: #5d8dca;
-    --bg4violeta; #825a9b;
+    --bg4violeta: #825a9b;
 }
